--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "tailwind-merge": "^3.3.1",
     "twilio": "^4.23.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
